# dockem-rs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  taskfile.yml
.github/: pull_request_template.md
.github/workflows/: build.yaml  testing.yaml
cli/: Cargo.toml  Cross.toml
cli/src/: cli.rs  main.rs  utils.rs
cli/src/utils/: assert_directory_exists.rs  assert_file_exists.rs  assert_string_not_empty.rs  build_docker_image.rs  build_docker_image_params.rs  build_image.rs  build_log.rs  check_manifest_head.rs  copy_docker_image.rs  copy_existing_image_tag.rs  create_docker_client.rs  create_regclient_client.rs  directory_exists.rs  docker_config_loader.rs  extract_version.rs  file_exists.rs  file_guard.rs  generate_docker_image_name.rs  hash_string.rs  hash_watch_directories.rs  hash_watch_files.rs  macros.rs  os_open.rs  parse_version_file_json.rs  remove_empty_strings.rs  tag_and_push_image.rs  tag_and_push_images.rs  tar_build_context.rs
cli/tests/utils_test/: file_exists_test.rs  utils_test.rs
scripts/: get_dockem.sh  get_dockem_local.sh
