[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bollard = "0.18.1"
clap = "4.5.29"
merkle_hash = "3.7.0"
oci-client = "0.14.0"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
rayon = "1.10.0"
tokio = "1.43.0"

[dev-dependencies]
tempfile = "3.16.0"
cargo-modules = "0.22.0"
