[package]
name = "cli"
version = "1.0.4"
edition = "2021"

[[bin]]
name = "dockem-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
bollard = "0.18.1"
clap = { version = "4.5.30", features = ["derive"] }
flate2 = "1.0.35"
merkle_hash = "3.7.0"
oci-client = "0.14.0"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
rayon = "1.10.0"
tar = "0.4.43"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
futures-util = "0.3.31"
# See https://github.com/sfackler/rust-openssl/issues/1627
# and https://docs.rs/openssl/latest/openssl/#vendored
openssl = { version = "0.10.71", features = ["vendored"] }


[dev-dependencies]
tempfile = "3.17.1"
cargo-modules = "0.22.1"
